fixed some color; button alignment; redirections

--- a/ZWPA/app/assets/stylesheets/overrides.scss
+++ b/ZWPA/app/assets/stylesheets/overrides.scss
@@ -337,4 +337,6 @@ h6 {
     font-weight: bold;
 }
 
-
+.tabs .indicator {
+  background-color: #1F6E56;
+}
